--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ img {
 }
 
 a {
-  color: #e74c3c !important;
+  color: #fff !important;
 }
 
 button:focus {
@@ -33,7 +33,8 @@ button:focus {
 
 .recipe_buttons {
   border: solid 2px #e74c3c;
-  background: transparent;
+  background-color: #2c3e50;
+  text-decoration: none;
   padding: 0.4rem 0.6rem;
   margin: 0 0.2rem;
   border-radius: 1px;
@@ -41,6 +42,29 @@ button:focus {
   text-transform: uppercase;
   font-weight: 500;
   margin-left: 0.7rem;
+  text-align: center;
+}
+
+.recipe_buttons a {
+    text-decoration: none;
+}
+
+.align_button {
+    text-align: center;
+}
+
+.recipe_buttons:hover {
+  border: solid 2px #2c3e50;
+  background-color: #e74c3c;
+  padding: 0.4rem 0.6rem;
+  margin: 0 0.2rem;
+  border-radius: 1px;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin-left: 0.7rem;
+  transition: 0.5s ease-in-out;
+  text-align: center;
 }
 
 .recipes__box {
@@ -99,7 +123,7 @@ button:focus {
   margin-left: 0.7rem;
 }
 
-input[type="text"] { 
+input[type="text"] {
   outline: none;
 }
 
